--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.inmaytide.orbit</groupId>
     <artifactId>commons-service</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>commons-services</name>
 
     <properties>
@@ -14,25 +14,14 @@
         <java.version>21</java.version>
         <feign.version>12.3</feign.version>
         <feign.form.version>12.3</feign.form.version>
+        <commons.version>2.0.0-SNAPSHOT</commons.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.inmaytide.orbit</groupId>
             <artifactId>commons</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>6.0.7</version>
+            <version>${commons.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -56,7 +45,7 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>2022.0.0.0-RC2</version>
+            <version>2022.0.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
