--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,21 @@
         <java.version>21</java.version>
         <feign.version>12.3</feign.version>
         <feign.form.version>12.3</feign.form.version>
+        <spring.version>6.1.1</spring.version>
+        <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
+        <spring.cloud.openfeign.version>4.1.0</spring.cloud.openfeign.version>
+        <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
         <commons.version>2.0.0-SNAPSHOT</commons.version>
+        <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons.lang3.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.inmaytide.orbit</groupId>
             <artifactId>commons</artifactId>
@@ -33,7 +44,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
-            <version>4.0.2</version>
+            <version>${spring.cloud.openfeign.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -45,25 +56,25 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>2022.0.0.0</version>
+            <version>${spring.cloud.alibaba.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>6.0.2</version>
+            <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-resource-server</artifactId>
-            <version>6.0.3</version>
+            <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.0.0</version>
+            <version>${jakarta.servlet.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
