--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
         <spring.cloud.openfeign.version>4.1.0</spring.cloud.openfeign.version>
         <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
-        <commons.version>2.0.0-SNAPSHOT</commons.version>
         <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
     </properties>
 
@@ -32,7 +31,7 @@
         <dependency>
             <groupId>com.inmaytide.orbit</groupId>
             <artifactId>commons</artifactId>
-            <version>${commons.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
