--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,9 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <java.version>21</java.version>
-        <feign.version>12.3</feign.version>
-        <feign.form.version>12.3</feign.form.version>
-        <spring.version>6.1.1</spring.version>
+        <spring.version>6.2.1</spring.version>
+        <spring.boot.version>3.4.0</spring.boot.version>
         <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
-        <spring.cloud.openfeign.version>4.1.0</spring.cloud.openfeign.version>
-        <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
         <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
     </properties>
 
@@ -35,27 +32,15 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-core</artifactId>
-            <version>${feign.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spring.boot.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-openfeign-core</artifactId>
-            <version>${spring.cloud.openfeign.version}</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-web</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>${spring.cloud.alibaba.version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
